--- a/src/components/Modal/index.css
+++ b/src/components/Modal/index.css
@@ -3,12 +3,12 @@
   position: fixed;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
+  overflow-y: scroll;
   background: rgba(256, 256, 256, 0.2);
   backdrop-filter: blur(5px);
   padding: 2rem;
@@ -20,7 +20,7 @@
   justify-content: space-between;
   align-items: flex-start;
   background-color: var(--white-dimmed);
-  height: 100%;
+  min-height: 600px;
   padding: 1rem 2rem;
   box-sizing: border-box;
   border: 1px solid rgba(0, 0, 0, 0.8);
