--- a/src/pages/Login/index.css
+++ b/src/pages/Login/index.css
@@ -5,14 +5,14 @@
   background-size: cover;
   display: flex;
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   position: absolute;
   top: 0;
   left: 0;
   z-index: 100;
 }
 .login-container__auth {
-  height: 100%;
+  /* height: 100%; */
   box-sizing: border-box;
   width: 50%;
   backdrop-filter: blur(2rem);
